--- a/Proyecto 01/proyecto/views/index.ejs
+++ b/Proyecto 01/proyecto/views/index.ejs
@@ -1,11 +1,126 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+  <title>JCGM</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+</head>
+
+<body>
+  <h1 class="Titulo" id="Titulo">Juan Carlos Gallo Muñoz</h1>
+  <hr>
+  <section id="container-presentacion">
+      <div>
+        <img id="img_yo" src="images\1118156.png" alt="foto mia" width="400" height="200">
+      </div>
+      <div>
+        <h2 id="titulo-yo">Acerca de mi</h2>
+        <p id="aboutme"> Mi nombre es Juan Carlos Gallo Muñoz, tengo 21 años de edad estudio trabajo 
+          en un negocio familiar vivo en Pedro Carbo, cantón del guayas, me gusta mucho programar
+           y cada vez que lo hago para mi es como estar jugando y me divierte mucho las posibilidades 
+           y los límites de mi imaginación para crear cosas, soy artista me dedico a pintar en cuadros 
+           de vidrio, hago ejercicio casi los días, trabajo los jueves a domingo y viajo todos los días 
+           para estudiar en mi mayor orgullo que es la ESPOL.
+        </p>
+      </div>>
+  </section>
+  <hr>
+  <section id="container-hf">
+    <div>
+      <h2 id="h2-h">habilidades</h2>
+      <ol>
+        <li class="l1">Creatividad</li>
+        <li class="l2">Seguimiento y control tecnológico</li>
+        <li class="l1">aprendizaje activo</li>
+        <li class="l2">crítico</li>
+        <li class="l1">Flexibilidad</li>
+        <li class="l2">inteligencia emocional</li>
+        <li class="l1">analítico</li>
+        <li class="l2">audaz</li>
+      </ol>
+    </div>
+
+    <div>
+      <img id="img_yo2" src="images\1118156.png" alt="imagen mia"  width="600" height="600">
+    </div>
+  </section>
+  <hr>
+  <section id="container-iE">
+    <div id="idiomas">
+      <h2>idiomas</h2>
+      
+      <div class="caja-idiomas">
+      <label>Ingles:</label>
+      <progress id="Ingles" value="35" max="100"> 35% </progress>
+      </div>
+
+      <div class="caja-idiomas">
+        <label>Español:</label>
+        <progress id="Español" value="100" max="100"> 35% </progress>
+      </div>
+      <div class="caja-idiomas">
+        <label>Mandarin:</label>
+        <progress id="Mandarin" value="2" max="100"> 35% </progress>
+      </div>
+    </div>
+
+    <div id="lenguajes">
+      <h2>Conocimientos</h2>
+      <div id="caja-lenguajes">
+          <img src="/images/css.png" alt="css" width="125" height="150">
+          <img src="/images/java.png" alt="java" width="125" height="150">
+          <img src="/images/python.png" alt="python" width="125" height="150">
+          <img src="/images/html.png" alt="html" width="125" height="150">
+      </div>
+    
+    </div>
+   
+  </section>
+ <hr>
+  <h2>Metas</h2>
+  <section id="container-metas">
+  
+   <div>
+      <p  id="circulo1">Graduarme</p>
+  </div>
+
+  <div >
+    <p id="circulo2">Pasar Dawm</p>
+  </div>
+
+  <div >
+    <p id=circulo3>Un buen programador</p>
+  </div>
+
+  <div >
+    <p id="circulo4">Trabajar para Google</p>
+  </div>
+
+  </section>
+
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <div id="container-contacto">
+      <p><a href="https://wa.me/593983345196">
+        <img src="/images/whatsapp.png" alt="Conctacto whatsapp" width="132" height="132">
+      </a></p>
+      <p><a href="https://www.instagram.com/juanpoio_/?hl=es">
+        <img src="/images/instagram.png" alt="Conctacto instagram" width="132" height="132">
+      </a></p>
+      <p><a href="https://wwww.facebook.com/juan.gallo.507027">
+        <img src="/images/facebook.png" alt="Conctacto facebook" width="132" height="132">
+      </a></p> 
+    </div>
+    <br>
+    <footer>Correo: jcgallo@espol.edu.ec</footer>
+  </section>
+
+
+</body>
+
 </html>
