--- a/Proyecto 02/proyecto02/views/index.ejs
+++ b/Proyecto 02/proyecto02/views/index.ejs
@@ -1,73 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>League of Legends</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="style" href="/public/stylesheets/style.css">
-    <link rel="styleanimacion" href="/public/stylesheets/animations.css">
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  </head>
-  <header>
-    <div class="container-fluid">
-      <h1 class="h1 text-center display-1 neon "> League Of Legends</h1>
-    </div>
-    
-  </header>
-  <body>
-    
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>League of Legends</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="style" href="/public/stylesheets/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
+  <link rel="styleanimacion" href="/public/stylesheets/animations.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css" rel="stylesheet" />
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+
+</head>
+<header>
+  <div class="container-fluid">
+    <h1 class="h1 text-center display-1 neon "> League Of Legends</h1>
+  </div>
+
+</header>
+
+<body>
+<div class="d-flex justify-content-around">
+  <button id="boton-buscar" type="button" class="btn btn-primary btn-lg ">search champion</button>
+  <div class="dropdown">
+    <button id="random-c" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+      Rol
+    </button>
+    <ul id="selector" class="dropdown-menu">
+      <li class="dropdown-header">Select your favorite rol</li>
+      <li class="divider"></li>
+      <button id="op-1" type="button" class="dropdown-item">Fighter</button>
+      <button id="op-2" type="button" class="dropdown-item">Tank</button>
+      <button id="op-3" type="button" class="dropdown-item">Assassin</button>
+      <button id="op-4" type="button" class="dropdown-item">Support</button>
+      <button id="op-5" type="button" class="dropdown-item">Mage</button>
+      <button id="op-6" type="button" class="dropdown-item">Marksman</button>
+      <li class="divider"></li>
+      <button id="op-0" type="button" class="dropdown-item">All</button>
+    </ul>
+  </div>
+</div>
+  <br>
+  <div id="contendor-g" class="container-md  glass">
     <div class="row">
-       <div class="col-sm-6 ">
-        <button id="boton-buscar" type="button" class="floating btn btn-primary btn-lg btn-block">search champion</button>
-       </div>
-       <div class="col-sm-6">
-        <div class="dropdown">
-          <button id="random-c" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-            Rol
-          </button>
-          <ul id="selector" class="dropdown-menu">
-            <li class="dropdown-header">Select your favorite rol</li>
-            <li class="divider"></li>
-            <button id="op-1" type="button" class="dropdown-item">Fighter</button>
-            <button id="op-2" type="button"class="dropdown-item">Tank</button>
-            <button id="op-3" type="button" class="dropdown-item">Assassin</button>
-            <button id="op-4" type="button"class="dropdown-item">Support</button>
-            <button id="op-5" type="button" class="dropdown-item">Mage</button>
-            <button id="op-6" type="button"class="dropdown-item">Marksman</button>
-            <li class="divider"></li>
-            <button id="op-0" type="button" class="dropdown-item">All</button>
-          </ul>
-        </div>
-       </div>
-    </div>
-    <div id="contendor-g" class="container-md pt-5 glass slideUp">
-      <div class="row">
-        <div class="col-md-4">
-          <h3 id="titulo-campeon">campeon</h1>
-          <img id="imagen-campeon" class="col-sm-4" src="http://ddragon.leagueoflegends.com/cdn/12.22.1/img/champion/Aatrox.png" height="60" width="50" alt="iconoLol">
-        </div>
-        <div class="col-md-8">
-          <h3>History</h1>
-          <p id="historia-campeon">adsadadadsadadadadasdasdadasdasdasdadas</p>
-        </div>
-      </div>
-      <div>
+      <div class="col-md-4">
+        <h1 id="titulo-campeon" class="titulo-campeon">campeon</h1>
+        <div class="d-flex p-3 justify-content-center">
+          <img id="imagen-campeon" class="col-sm-4 img-fluid"
+            src="http://ddragon.leagueoflegends.com/cdn/12.22.1/img/champion/Aatrox.png" height="100" width="100"
+            alt="iconoLol">
 
+        </div>
+        <h3 id="apodo-campeon" class="titulo-campeon">titulo</h3>
 
       </div>
+      <div class="col-md-8">
+        <h3>History</h1>
+          <p id="historia-campeon"></p>
+          <h4 id="texto-div"></h4>
+          <h3 id="tags-campeon"></h3>
+      </div>
     </div>
-    
+    <div class="row">
+      <div class="col-sm-6">
+        <table id="animations-example-4" class="charts-css bar show-labels show-primary-axis">
+          <caption>Stats</caption>
+          <tr id="th1"> </tr>
+          <tr id="th2"></tr>
+          <tr id="th3"></tr>
+          <tr id="th4"> </tr>
+          <tr id="th5"></tr>
+        </table>
+      </div>
+      <div class="col-sm-6">
+        <table class="charts-css column show-labels" id="my-chart">
+          <tr id="th10"></tr>
+          <tr id="th20"></tr>
+          <tr id="th30"></tr>
+          <tr id="th40"></tr>
+        </table>
+      </div>
+    </div>
+    <br>
+    <!-- Carousel -->
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+      <!-- Indicators/dots -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+      </div>
+
+      <!-- The slideshow/carousel -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img id="imagen-c1" src="" alt="imagen-campeon" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+          <img id="imagen-c2" src="" alt="imagen-campeon" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+          <img id="imagen-c3" src="" alt="imagen-campeon" class="d-block w-100">
+        </div>
+      </div>
+
+      <!-- Left and right controls/icons -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+  </div>
 
 
-    <script src="/javascripts/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script>
-      $('boton-buscar').click(function() {
-        $(this).addClass("floating");
-      });
-    </script>
-  </body>
+
+  <script src="/javascripts/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"></script>
+</body>
+
+
 </html>
