--- a/Proyecto 02/proyecto02/views/index.ejs
+++ b/Proyecto 02/proyecto02/views/index.ejs
@@ -5,11 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>League of Legends</title>
+  <link rel="icon" type="image/ico" href="/images/icon.ico"/>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="style" href="/public/stylesheets/style.css">
+ <link rel="styleanimacion" href="/public/stylesheets/animations.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
-  <link rel="styleanimacion" href="/public/stylesheets/animations.css">
+  
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css" rel="stylesheet" />
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 
@@ -43,7 +46,7 @@
   </div>
 </div>
   <br>
-  <div id="contendor-g" class="container-md  glass">
+  <div id="contendor-g" class="container-md p-5 glass">
     <div class="row">
       <div class="col-md-4">
         <h1 id="titulo-campeon" class="titulo-campeon">campeon</h1>
@@ -57,13 +60,23 @@
 
       </div>
       <div class="col-md-8">
-        <h3>History</h1>
+        <h3 id="t-historia">History</h1>
           <p id="historia-campeon"></p>
           <h4 id="texto-div"></h4>
           <h3 id="tags-campeon"></h3>
       </div>
     </div>
     <div class="row">
+      <div class="col-sm-6">
+        <table id="animations-example-4" class="charts-css column show-labels show-data-on-hover">
+          <tr id="th10"></tr>
+          <tr id="th20"></tr>
+          <tr id="th30"></tr>
+          <tr id="th40"></tr>
+        </table>
+        
+      </div>
+      <br>
       <div class="col-sm-6">
         <table id="animations-example-4" class="charts-css bar show-labels show-primary-axis">
           <caption>Stats</caption>
@@ -72,14 +85,6 @@
           <tr id="th3"></tr>
           <tr id="th4"> </tr>
           <tr id="th5"></tr>
-        </table>
-      </div>
-      <div class="col-sm-6">
-        <table class="charts-css column show-labels" id="my-chart">
-          <tr id="th10"></tr>
-          <tr id="th20"></tr>
-          <tr id="th30"></tr>
-          <tr id="th40"></tr>
         </table>
       </div>
     </div>
@@ -115,8 +120,7 @@
       </button>
     </div>
   </div>
-
-
+  
 
   <script src="/javascripts/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -124,5 +128,5 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"></script>
 </body>
 
-
+</script>
 </html>
