solucionar ingreso de datos

--- a/Proyecto 03/Nueva carpeta/potterhead/src/app/components/movies/movies.component.html
+++ b/Proyecto 03/Nueva carpeta/potterhead/src/app/components/movies/movies.component.html
@@ -6,16 +6,17 @@
 			<div class="row mt-3">
 				
 				<!-- Etiquetas a repetir - INICIO -->
-				<div class="col-6 col-md-2">
+				<div class="col-6 col-md-2" *ngFor="let movie of movies">
 					<div class="card border-0">
 						<div class="row g-0">
 							<div class="col-12">
-								<img src="https://www.wizardingworld.com/images/products/films/rectangle-9.png" class="img-fluid rounded-start" alt="Fantastic Beasts and Where to Find Them" >
+								<img src="{{movie.attributes.poster}}" class="img-fluid rounded-start" alt="{{movie.attributes.slug}}" >
 							</div>
 							<div class="col-12">
 								<div class="card-body">
 									<h3 class="card-title fw-bold text-center">
-									<a routerLink="/movie">Fantastic Beasts and Where to Find Them</a>
+									
+										<a routerLink="/movie/{{movie.id}}">{{movie.attributes.title}}</a>
 									</h3>
 								</div>
 							</div>
