--- a/Proyecto 03/proyecto3/src/app/componentes/galeria/galeria.component.html
+++ b/Proyecto 03/proyecto3/src/app/componentes/galeria/galeria.component.html
@@ -1,1 +1,20 @@
-<p>galeria works!</p>
+<header>
+    <div class="container-fluid">
+      <p class="text-center neon "> League Of Legends</p>
+    </div>
+  
+  </header>
+  <body>
+    <nav class="navbar">
+      <a routerLink="/Estadistica" >Stadistic</a>
+      <a routerLink="/Historia">History</a>
+      <a routerLink="/Galeria"  class="selected neon">Galery</a>
+      <a routerLink="/Buscador" >Back</a>
+    </nav>
+        <div id="contendor-g" class="container-md p-5 glass">
+          
+          
+        </div>
+        
+      
+      </body>
