--- a/Proyecto 03/proyecto3/src/app/componentes/buscador/buscador.component.html
+++ b/Proyecto 03/proyecto3/src/app/componentes/buscador/buscador.component.html
@@ -1,25 +1,18 @@
+<header>
+  <div class="container-fluid">
+    <p class="text-center neon "> League Of Legends</p>
+  </div>
+
+</header>
 <body>
-    
+  
       <div id="contendor-g" class="container-md p-5 glass">
-        
-        <div class="Wrapper">
-            <div class="search-input">
-                <a href="" target="_blank" hidden></a>
-                <input type="text" placeholder="Buscar campeon....">
-                <div class="autocom-box"></div>
-            </div>
-            <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                  </svg>
-            </div>
+        <div class="d-flex justify-content-around">
+          <button id="boton-buscar" type="button" class="btn btn-primary btn-lg ">search champion</button>
+          
         </div>
       </div>
-      
+     
     
-      <script src="/javascripts/script.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-      <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"></script>
     </body>
     
