--- a/Proyecto 03/proyecto3/src/app/componentes/estadistica/estadistica.component.html
+++ b/Proyecto 03/proyecto3/src/app/componentes/estadistica/estadistica.component.html
@@ -1,1 +1,20 @@
-<p>estadistica works!</p>
+<header>
+    <div class="container-fluid">
+      <p class="text-center neon "> League Of Legends</p>
+    </div>
+  
+  </header>
+  <body>
+    <nav class="navbar">
+      <a routerLink="/Estadistica"  class="selected neon">Stadistic</a>
+      <a routerLink="/Historia">History</a>
+      <a routerLink="/Galeria" >Galery</a>
+      <a routerLink="/Buscador" >Back</a>
+    </nav>
+        <div id="contendor-g" class="container-md p-5 glass">
+          <p *ngIf="data.length >0 " [innerHTML]="data.id"> </p>
+          
+        </div>
+        
+      
+      </body>
