--- a/Proyecto 03/proyecto3/src/app/componentes/estadistica/estadistica.component.css
+++ b/Proyecto 03/proyecto3/src/app/componentes/estadistica/estadistica.component.css
@@ -33,10 +33,12 @@ body{
     text-transform: uppercase;
     letter-spacing: 2px;
   }
-  .glass{
+  #div-cm{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+  }
+  .glass{
     color: white;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
@@ -79,6 +81,7 @@ body{
     }
     
   }
+  
    /* Estilos para el navbar */
    .navbar {
     display: flex;
