--- a/Proyecto 03/proyecto3/src/app/componentes/galeria/galeria.component.html
+++ b/Proyecto 03/proyecto3/src/app/componentes/galeria/galeria.component.html
@@ -6,15 +6,50 @@
   </header>
   <body>
     <nav class="navbar">
-      <a routerLink="/Estadistica" >Stadistic</a>
-      <a routerLink="/Historia">History</a>
-      <a routerLink="/Galeria"  class="selected neon">Galery</a>
-      <a routerLink="/Buscador" >Back</a>
+      <a routerLink="/Estadistica/{{data[0].id}}">Stadistic</a>
+      <a routerLink="/Historia/{{data[0].id}}">History</a>
+      <a routerLink="/Galeria/{{data[0].id}}" class="selected neon">Galery</a>
+      <a routerLink="/Buscador">Back</a>
     </nav>
-        <div id="contendor-g" class="container-md p-5 glass">
-          
-          
+    
+    <div id="contendor-g" class="container-md p-5 glass">
+      <div>
+        <p id="c-campeon" class="h1 display-1">{{data[0].id}}</p>
+      </div>
+      <!-- Carousel -->
+      <div class="container-fluid">
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <!-- Indicators/dots -->
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
         </div>
-        
+    
+        <!-- The slideshow/carousel -->
       
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img  src="http://ddragon.leagueoflegends.com/cdn/img/champion/splash/{{data[0].id}}_0.jpg" alt="imagen-campeon" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="http://ddragon.leagueoflegends.com/cdn/img/champion/splash/{{data[0].id}}_1.jpg" alt="imagen-campeon" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img  src="http://ddragon.leagueoflegends.com/cdn/img/champion/splash/{{data[0].id}}_2.jpg" alt="imagen-campeon" class="d-block w-100">
+          </div>
+        </div>
+    
+        <!-- Left and right controls/icons -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+      </div>
+      </div>
+      
+    </div>
+        
       </body>
