--- a/Proyecto 03/proyecto3/src/app/componentes/buscador/buscador.component.html
+++ b/Proyecto 03/proyecto3/src/app/componentes/buscador/buscador.component.html
@@ -23,12 +23,15 @@
       </button>
       <br />
       <br />
+      <span>or</span>
+      <br>
+      <br>
       <form class="d-flex">
         <input
           id="buscar"
           class="form-control me-2"
           type="text"
-          placeholder="Search"
+          placeholder="Search champion"
         />
         <button (click)="buscarID()" class="btn btn-primary" type="button">
           Search
